--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3882,7 +3882,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: 20px 0;
+  margin: 0 0;
   border-radius: 4px;
 }
 .pagination > li {
